# pycounts

./: LICENSE  README.md  pyproject.toml
docs/: conf.py
pycounts/: LICENSE  README.md  pyproject.toml
src/pycounts/: plotting.py  pycounts.py
